--- a/helm/charts/amplication/values-dev.yaml
+++ b/helm/charts/amplication/values-dev.yaml
@@ -2,6 +2,7 @@ amplication-server:
   config:
     env:
       GITHUB_APP_APP_ID: "189214"
+      CONTAINER_BUILDER_DEFAULT: gcs
       GITHUB_APP_CLIENT_ID: Iv1.7eb319d8e3c170d7
       GITHUB_APP_INSTALLATION_URL: https://github.com/apps/amplication-aws/installations/new?state={state}
       GITHUB_REDIRECT_URI: https://server.amplication-dev.com/github/callback
