docker: update dockers files

--- a/packages/amplication-git-pull-service/Dockerfile
+++ b/packages/amplication-git-pull-service/Dockerfile
@@ -18,6 +18,7 @@ FROM base AS build
 WORKDIR /app
 # Copy amplication/git-pull-service and the its dependent packages
 COPY packages/amplication-git-pull-service packages/amplication-git-pull-service
+COPY packages/amplication-kafka packages/amplication-kafka
 
 # Installs all copied package node_modules ; Preparation for build
 RUN npm run bootstrap -- --scope=@amplication/git-pull-service --include-dependencies
@@ -36,6 +37,10 @@ WORKDIR /app/packages/amplication-git-pull-service
 COPY --from=build /app/packages/amplication-git-pull-service/package.json /app/packages/amplication-git-pull-service/package.json
 COPY --from=build /app/packages/amplication-git-pull-service/node_modules /app/packages/amplication-git-pull-service/node_modules
 COPY --from=build /app/packages/amplication-git-pull-service/dist /app/packages/amplication-git-pull-service/dist
+
+COPY --from=build /app/packages/amplication-kafka/package.json /app/packages/amplication-kafka/package.json
+COPY --from=build /app/packages/amplication-kafka/node_modules /app/packages/amplication-kafka/node_modules
+COPY --from=build /app/packages/amplication-kafka/lib /app/packages/amplication-kafka/lib
 
 EXPOSE 3000
 CMD [ "node", "dist/src/main"]
