--- a/packages/amplication-server/Dockerfile
+++ b/packages/amplication-server/Dockerfile
@@ -24,6 +24,7 @@ COPY packages/amplication-data-service-generator packages/amplication-data-servi
 COPY packages/amplication-deployer packages/amplication-deployer
 COPY packages/amplication-git-service packages/amplication-git-service
 COPY packages/amplication-prisma-db packages/amplication-prisma-db
+COPY packages/amplication-kafka packages/amplication-kafka
 
 # Installs all copied package node_modules ; Preparation for build
 RUN npm run bootstrap -- --scope @amplication/server --include-dependencies
@@ -72,6 +73,10 @@ COPY --from=build /app/packages/amplication-git-service/dist /app/packages/ampli
 COPY --from=build /app/packages/amplication-prisma-db/package.json /app/packages/amplication-prisma-db/package.json
 COPY --from=build /app/packages/amplication-prisma-db/node_modules /app/packages/amplication-prisma-db/node_modules
 COPY --from=build /app/packages/amplication-prisma-db/lib /app/packages/amplication-prisma-db/lib
+
+COPY --from=build /app/packages/amplication-kafka/package.json /app/packages/amplication-kafka/package.json
+COPY --from=build /app/packages/amplication-kafka/node_modules /app/packages/amplication-kafka/node_modules
+COPY --from=build /app/packages/amplication-kafka/lib /app/packages/amplication-kafka/lib
 
 EXPOSE 3000
 CMD [ "node", "dist/src/main"]
