--- a/packages/amplication-storage-gateway/package.json
+++ b/packages/amplication-storage-gateway/package.json
@@ -13,11 +13,13 @@
     "docker:build": "docker build ."
   },
   "dependencies": {
+    "@amplication/kafka": "^0.12.2",
     "@nestjs/common": "8.4.4",
     "@nestjs/config": "1.1.5",
     "@nestjs/core": "8.2.3",
     "@nestjs/graphql": "9.1.2",
     "@nestjs/jwt": "8.0.0",
+    "@nestjs/microservices": "8.4.4",
     "@nestjs/passport": "8.2.1",
     "@nestjs/platform-express": "8.2.3",
     "@nestjs/serve-static": "2.2.2",
@@ -29,6 +31,7 @@
     "glob": "8.0.1",
     "graphql": "15.7.2",
     "graphql-type-json": "0.3.2",
+    "jsonwebtoken": "8.5.1",
     "nest-access-control": "2.0.3",
     "nest-morgan": "1.0.1",
     "nestjs-paginate": "2.5.4",
@@ -48,6 +51,7 @@
     "@types/glob": "7.2.0",
     "@types/graphql-type-json": "0.3.2",
     "@types/jest": "26.0.19",
+    "@types/jsonwebtoken": "8.5.8",
     "@types/normalize-path": "3.0.0",
     "@types/passport-http": "0.3.9",
     "@types/passport-jwt": "3.0.6",
