add import to auth module

--- a/packages/amplication-data-service-generator/package.json
+++ b/packages/amplication-data-service-generator/package.json
@@ -25,13 +25,7 @@
     "@extra-set/difference": "2.2.4",
     "camel-case": "4.1.2",
     "fast-glob": "3.2.10",
-    "lodash.countby": "4.6.0",
-    "lodash.flatten": "4.4.0",
-    "lodash.groupby": "4.6.0",
-    "lodash.mapvalues": "4.6.0",
-    "lodash.memoize": "4.1.2",
-    "lodash.omit": "4.5.0",
-    "lodash.uniqby": "4.7.0",
+    "lodash": "4.6.0",
     "nest-morgan": "1.0.1",
     "param-case": "3.0.4",
     "pascal-case": "3.1.2",
