--- a/packages/amplication-basic-auth-plugin/package.json
+++ b/packages/amplication-basic-auth-plugin/package.json
@@ -13,7 +13,7 @@
         "normalize-path": "3.0.0"      
     },
     "devDependencies": {
-        "@types/lodash": "^4.14.182",
+        "@types/lodash": "4.14.182",
         "@types/normalize-path": "3.0.0"
     }
 }
