--- a/helm/charts/services/amplication-git-push-webhook-service/Chart.yaml
+++ b/helm/charts/services/amplication-git-push-webhook-service/Chart.yaml
@@ -1,19 +1,8 @@
 apiVersion: v2
-name: amplication-server
-description: A Helm chart for the amplication-server component of Amplication.
+name: amplication-git-push-webhook-service
+description: A Helm chart for the amplication-git-push-webhook-service component of Amplication.
 
 dependencies:
-
-- name: postgresql
-  alias: postgres
-  version: "10.5.2"
-  repository: "https://charts.bitnami.com/bitnami"
-  condition: postgres.install
-
-- name: cp-helm-charts
-  version: "0.6.1"
-  repository: "https://confluentinc.github.io/cp-helm-charts/"
-  condition: cp-helm-charts.cp-kafka.enabled
 
 - name: base
   version: "0.1.0"
