--- a/helm/charts/services/amplication-server/values.yaml
+++ b/helm/charts/services/amplication-server/values.yaml
@@ -40,6 +40,8 @@ secrets:
 pvc:
   storageLimit: 5Gi
   storageRequest: 1Gi
+  name: efs-claim
+  storageName: efs-sc
 
 # Postgresql Server
 postgres:
@@ -53,3 +55,39 @@ postgres:
     imagePullPolicy: Always
     primary:
       podLabels: { name: "postgres" }
+
+cp-helm-charts:
+  cp-kafka:
+    enabled: true
+    prometheus:
+      jmx:
+        enabled: true
+    podAnnotations:
+      cluster-autoscaler.kubernetes.io/safe-to-evict: 'false'
+    resources:
+      limits:
+        cpu: 2
+        memory: 4Gi
+      requests:
+        cpu: 2
+        memory: 4Gi
+    brokers: 1
+    persistence:
+      enabled: true
+      size: 100Gi
+    configurationOverrides:
+      offsets.topic.replication.factor: "1"
+    heapOptions: "-Xms2g -Xmx2g"
+  cp-zookeeper:
+    enabled: true  
+  cp-schema-registry:
+    enabled: false
+  cp-kafka-rest:
+    enabled: false
+  cp-kafka-connect:
+    enabled: false
+  cp-control-center:
+    enabled: false
+  cp-kspl-server:
+    enabled: false
+    
