--- a/.github/workflows/cd-aws.yml
+++ b/.github/workflows/cd-aws.yml
@@ -117,7 +117,7 @@ jobs:
           echo "APP_NAME = $APP_NAME"
           echo "APP_NAME=$APP_NAME" >> $GITHUB_ENV
       - name: create app yaml
-        id: create-app-yaml
+        id: create-namespace-yaml
         run: |
           cp $GITHUB_WORKSPACE/.github/workflows/argocd/namespace.yaml namespace.yaml
           sed -i "s|NAMESPACE_PLACEHOLDER|$NAMESPACE|g" namespace.yaml
@@ -134,7 +134,6 @@ jobs:
       - name: deploy app
         id: deploy-app
         run: |
-          
           COMMONM_VALUES_FILE="values-common.yaml"
           ENV_VALUES_FILE="values-$TARGET_ENV.yaml"
           ARGO_CD_URL="argocd.$TARGET_ENV.amplication-dev.com"
@@ -144,16 +143,6 @@ jobs:
               ARGO_CD_URL="argocd.amplication.com"
             fi
           fi
-          echo "GCP secret name: $GCP"
-          echo "GITHUB_APP_CLIENT_SECRET secret name: $GITHUB_APP_CLIENT_SECRET"
-          echo "GITHUB_APP_PRIVATE_KEY secret name: $GITHUB_APP_PRIVATE_KEY"
-          echo "GITHUB_CLIENT_SECRET secret name: $GITHUB_CLIENT_SECRET"
-          echo "POSTGRESQL_PASSWORD secret name: $POSTGRESQL_PASSWORD"
-          echo "POSTGRESQL_URL secret name: $POSTGRESQL_URL"
-          echo "JWT_SECRET secret name: $JWT_SECRET"
-          echo "SERVICE_JWT_SECRET secret name: $SERVICE_JWT_SECRET"
-
-          #kubectl apply -f app.yaml
           export TARGET_ENV_SECRET=$(echo $TARGET_ENV | tr 'a-z' 'A-Z' | tr '-' '_')
           echo "TARGET_ENV_SECRET: $TARGET_ENV_SECRET"
           COMMAND="argocd login $ARGO_CD_URL --username admin --password $ARGO_CD_PASSWORD --grpc-web"
