redirect from http to https added

--- a/packages/amplication-client/nginx.conf
+++ b/packages/amplication-client/nginx.conf
@@ -1,4 +1,9 @@
 server {
+  listen 80;
+  return 301 https://amplication.com$request_uri;
+}
+
+server {
   listen 8080;
   root /app;
   location / {
