--- a/.github/workflows/ci-aws.yml
+++ b/.github/workflows/ci-aws.yml
@@ -251,9 +251,11 @@ jobs:
         env:
           working-directory: packages/${{ matrix.service }}
         run: |
-          GITHUB_HASH_MOD=$(find ./packages/${{ matrix.service }} -type f \( -exec sha1sum {} \; \) | awk '{print $1}' | sort | sha1sum)
-          echo "GITHUB_HASH=${GITHUB_HASH_MOD%???}" >> $GITHUB_ENV
-          echo $GITHUB_HASH    
+          npm i
+          GITHUB_HASH=$(find . -type f -print0 | sort -z | xargs -0 sha1sum | sha1sum | awk '{print $1}')
+          echo "GITHUB_HASH=$GITHUB_HASH" >> $GITHUB_ENV
+          echo $GITHUB_HASH
+          rm -rf node_modules
       - name: set branch-name
         run: |
           echo "BRANCH_NAME=$(echo $GITHUB_REF_NAME | sed "s/\//-/g")" >> $GITHUB_ENV
