feat(storage): upload data

--- a/packages/amplication-storage-gateway/.env
+++ b/packages/amplication-storage-gateway/.env
@@ -2,3 +2,6 @@ COMPOSE_PROJECT_NAME=amp_cl220fgz70085lfrorbovbv88
 JWT_SECRET_KEY=m&XAFzBpM3es
 JWT_EXPIRATION=2d
 PORT=3002
+
+# Kafka Topics
+CHECK_USER_ACCESS_TOPIC="auth.user.access"
