--- a/helm/charts/amplication/values-staging-os.yaml
+++ b/helm/charts/amplication/values-staging-os.yaml
@@ -27,3 +27,4 @@ amplication-server:
       GITHUB_SECRET_SECRET_NAME: "projects/948093699220/secrets/github-secret-amplication-aws/versions/1"
       HOST: "https://server.staging-os.amplication-dev.com"
       GITHUB_CLIENT_ID: "aa4d2f3ccd7d47cbbf71"
+      CLIENT_HOST: 'https://app.staging-os.amplication-dev.com'
