--- a/packages/amplication-git-pull-service/Dockerfile
+++ b/packages/amplication-git-pull-service/Dockerfile
@@ -11,7 +11,7 @@ RUN npm config set fund false
 
 WORKDIR /app
 COPY lerna.json /app
-COPY package*.json /app
+COPY package*.json /app/
 RUN npm ci --production
 
 FROM base AS build
@@ -32,15 +32,12 @@ RUN npm run clean -- --yes
 # Rebuild production node_modules
 RUN npm run bootstrap -- -- --production --scope @amplication/git-pull-service --include-dependencies
 
+RUN find ./packages/amplication-*/* -type d ! -path "*node_modules*" ! -path "*dist*" ! -path "*lib*" -exec rm -rf {} +
+RUN find ./packages/amplication-*/* -type f ! -path "*lib*" ! -path "*node_modules*" ! -path "*dist*" ! -name package.json -exec rm -rf {} +
+
 FROM base as git-pull-service
 WORKDIR /app/packages/amplication-git-pull-service
-COPY --from=build /app/packages/amplication-git-pull-service/package.json /app/packages/amplication-git-pull-service/package.json
-COPY --from=build /app/packages/amplication-git-pull-service/node_modules /app/packages/amplication-git-pull-service/node_modules
-COPY --from=build /app/packages/amplication-git-pull-service/dist /app/packages/amplication-git-pull-service/dist
-
-COPY --from=build /app/packages/amplication-kafka/package.json /app/packages/amplication-kafka/package.json
-COPY --from=build /app/packages/amplication-kafka/node_modules /app/packages/amplication-kafka/node_modules
-COPY --from=build /app/packages/amplication-kafka/lib /app/packages/amplication-kafka/lib
+COPY --from=build /app/packages/ /app/packages/
 
 EXPOSE 3000
 CMD [ "node", "dist/src/main"]
