--- a/helm/charts/amplication/values-staging-os.yaml
+++ b/helm/charts/amplication/values-staging-os.yaml
@@ -21,7 +21,6 @@ amplication-server:
   config:
     env:
       GITHUB_APP_APP_ID: "189214"
-      CONTAINER_BUILDER_DEFAULT: docker
       GITHUB_APP_CLIENT_ID: "Iv1.7eb319d8e3c170d7"
       GITHUB_APP_INSTALLATION_URL: "https://github.com/apps/amplication-aws/installations/new?state={state}"
       GITHUB_REDIRECT_URI: "https://server.staging-os.amplication-dev.com/github/callback"
@@ -36,3 +35,6 @@ amplication-server:
       GCP_APPS_REGION: us-east1
       GCP_APPS_DATABASE_INSTANCE: apps-database-instance
       GCS_BUCKET: amplication-artifacts
+      CONTAINER_BUILDER_DEFAULT: cloud-build
+      DEPLOYER_DEFAULT: gcp
+      LOCAL_DISK_ROOT: /artifacts
