fix(server): env name

--- a/packages/amplication-server/.env
+++ b/packages/amplication-server/.env
@@ -31,6 +31,7 @@ CONTAINER_BUILDER_DEFAULT=docker
 
 # Kafka Topics
 GENERATE_PULL_REQUEST_TOPIC="git.pr.generate.message"
+CHECK_USER_ACCESS_TOPIC="auth.user.access"
 
 #GitHub App
 GITHUB_APP_CLIENT_SECRET = [use-secret-manager]
@@ -40,4 +41,4 @@ GITHUB_APP_PRIVATE_KEY = [github-app-private-key]
 GITHUB_APP_INSTALLATION_URL = [github-app-installation-url]
 
 # Kafka brokers
-KAFKA_BROKER_URL_VAR="localhost:9092"
+KAFKA_BROKERS="["localhost:9092"]"
