--- a/.github/workflows/ci-aws.yml
+++ b/.github/workflows/ci-aws.yml
@@ -141,12 +141,12 @@ jobs:
         run: lerna run --scope=${{matrix.package}} --loglevel=silent test:cov
       
       - name: Copy Coverage To Predictable Location
-        run: cp packages/${{matrix.service}}/coverage/clover.xml coverage/clover.xml
+        run: cp packages/${{matrix.service}}/coverage/clover.xml clover.xml
 
       - name: Code Coverage Summary Report
         uses: irongut/CodeCoverageSummary@v1.0.2
         with:
-          filename: coverage/clover.xml
+          filename: clover.xml
           badge: true
           format: 'markdown'
           output: 'both'
