--- a/.github/workflows/ci-aws.yml
+++ b/.github/workflows/ci-aws.yml
@@ -141,7 +141,11 @@ jobs:
         run: lerna run --scope=${{matrix.package}} --loglevel=silent test:cov
       
       - name: Copy Coverage To Predictable Location
-        run: cp packages/${{matrix.service}}/coverage/clover.xml clover.xml
+        run: |
+          cat packages/${{matrix.service}}/coverage/clover.xml
+          pwd
+          cp packages/${{matrix.service}}/coverage/clover.xml clover.xml
+          ls -l
 
       - name: Code Coverage Summary Report
         uses: irongut/CodeCoverageSummary@v1.0.2
