--- a/packages/amplication-server/package.json
+++ b/packages/amplication-server/package.json
@@ -20,7 +20,7 @@
     "lint:fix": "npm run lint -- --fix",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
+    "test:cov": "jest --coverage --outputFile=report.json --json",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json --runInBand",
     "start:db": "npm run migrate:up && npm run prisma:generate && npm run seed",
