--- a/.github/workflows/ci-aws.yml
+++ b/.github/workflows/ci-aws.yml
@@ -136,37 +136,16 @@ jobs:
         id: test
         run: lerna run --scope=${{matrix.package}} --loglevel=silent test
 
-      - uses: ArtiomTr/jest-coverage-report-action@v2
+      - name: Run Code coverage 
+        id: cc
+        run: lerna run --scope=${{matrix.package}} --loglevel=silent test:cov
+      
+      - name: Run Code coverage test
+        uses: danhunsaker/clover-reporter-action@v0.2.17-clover
         with:
-          working-directory: packages/${{matrix.service}}
-        # with: 
-        #   test-script: lerna run --scope=${{matrix.package}} --loglevel=silent test:cov
-      # - name: Run tests with code-coverage
-      #   id: cc
-      #   run: lerna run --scope=${{matrix.package}} --loglevel=silent test:cov
-    
-      # - name: Copy Coverage To Predictable Location
-      #   run: |
-      #     cat packages/${{matrix.service}}/report.json
-      #     pwd
-      #     cp packages/${{matrix.service}}/report.json report.json
-      #     ls -l
-
-      # - name: Code Coverage Summary Report
-      #   uses: irongut/CodeCoverageSummary@v1.0.2
-      #   with:
-      #     filename: report.json
-      #     badge: true
-      #     format: 'markdown'
-      #     output: 'both'
-
-      # - name: Add Coverage PR Comment
-      #   uses: marocchino/sticky-pull-request-comment@v2
-      #   if: github.event_name == 'pull_request'
-      #   with:
-      #     recreate: true
-      #     path: code-coverage-results.md
-
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          clover-file: packages/${{matrix.service}}/coverage/clover.xml
+      
       - name: Discord notification
         if: failure()
         uses: Ilshidur/action-discord@0.3.2
