--- a/.github/workflows/generated-app-tests.yml
+++ b/.github/workflows/generated-app-tests.yml
@@ -1,10 +1,10 @@
 name: Generated App Tests
 on:
   workflow_dispatch:
-  # pull_request:
-  #   types: [ opened, synchronize, reopened ]
-  #   paths:
-  #     - "packages/**"
+  pull_request:
+    types: [ opened, synchronize, reopened ]
+    paths:
+      - "packages/**"
 
 jobs:
 
