--- a/.github/workflows/fork-to-branch.yaml
+++ b/.github/workflows/fork-to-branch.yaml
@@ -19,7 +19,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
-          token: ${{ secrets.PERSONAL_ACCESS_TOKEN }} # need to add PAT
+          token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
 
       - name: Check if branch exists
         run: |
