--- a/.github/workflows/ci-aws.yml
+++ b/.github/workflows/ci-aws.yml
@@ -185,7 +185,13 @@ jobs:
           working-directory: packages/${{ matrix.service }}
           hashes: ${{ needs.changes.outputs.service_retag_list }}
         run: |
-          GITHUB_HASH=$(echo $hashes | jq -r '."${{ matrix.service }}"')
+          echo "$hashes" >> hashes.json
+          echo "matrix.service: ${{ matrix.service }}"
+          cat hashes.json
+          jq -r '.' hashes.json
+          jq -r '.\"${{ matrix.service }}\"' hashes.json
+
+          GITHUB_HASH=$(echo $hashes | jq -r '."hashes.json"')
           echo "GITHUB_HASH=${GITHUB_HASH}" >> $GITHUB_ENV
           echo $GITHUB_HASH
       - name: Check if repo exist
