--- a/.github/workflows/ci-aws.yml
+++ b/.github/workflows/ci-aws.yml
@@ -263,10 +263,17 @@ jobs:
       - name: Set hash
         env:
           working-directory: packages/${{ matrix.service }}
+          hashes: ${{ needs.changes.outputs.service_retag_list }}
         run: |
-          GITHUB_HASH_MOD=$(find ./packages/${{ matrix.service }} -type f \( -exec sha1sum {} \; \) | awk '{print $1}' | sort | sha1sum)
-          echo "GITHUB_HASH=${GITHUB_HASH_MOD%???}" >> $GITHUB_ENV
-          echo $GITHUB_HASH    
+          echo "$hashes" >> hashes.json
+          echo "matrix.service: ${{ matrix.service }}"
+          cat hashes.json
+          jq -r '.' hashes.json
+          jq -r '.\"${{ matrix.service }}\"' hashes.json
+
+          GITHUB_HASH=$(echo $hashes | jq -r '."hashes.json"')
+          echo "GITHUB_HASH=${GITHUB_HASH}" >> $GITHUB_ENV
+          echo $GITHUB_HASH   
       - name: set branch-name
         run: |
           echo "BRANCH_NAME=$(echo $GITHUB_REF_NAME | sed "s/\//-/g")" >> $GITHUB_ENV
