--- a/.github/workflows/fork-to-branch.yaml
+++ b/.github/workflows/fork-to-branch.yaml
@@ -1,49 +1,84 @@
 name: FORK-TO-BRANCH
 
 on:
-  workflow_dispatch:
-    inputs:
-      source-branch:
-        type: string
-        description: The name of the branch from forked-repo.
-        required: true
-      contributor-name:
-        type: string
-        description: write the contributor github username
-        required: true
+  issue_comment:
+    types: [created]
 
 jobs:
   create_branch:
     runs-on: ubuntu-latest
+    if: ${{ github.event.issue.pull_request }}
     steps:
+      - uses: actions/github-script@v3
+        id: get-pr
+        with:
+          script: |
+            const request = {
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              pull_number: context.issue.number
+            }
+            core.info(`Getting PR #${request.pull_number} from ${request.owner}/${request.repo}`)
+            try {
+              const result = await github.pulls.get(request)
+              return result.data
+            } catch (err) {
+              core.setFailed(`Request failed with error ${err}`)
+            }
+
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
           token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+          ref: ${{ fromJSON(steps.get-pr.outputs.result).head.ref }}
+          repository: ${{ fromJSON(steps.get-pr.outputs.result).head.repo.full_name }}
+
+      - uses: khan/pull-request-comment-trigger@v1.1.0
+        id: check
+        with:
+          trigger: "run branch"
+          prefix_only: 'true'
 
       - name: Check if branch exists
+        if: steps.check.outputs.triggered == 'true'
+        env: 
+          REF: ${{ fromJSON(steps.get-pr.outputs.result).head.ref }}
+          PR_NUMBER: ${{ github.event.issue.number }}
         run: |
-          existed_in_repo=$(git ls-remote --heads origin feature/${{ github.event.inputs.source-branch }})
+          existed_in_repo=$(git ls-remote --heads origin pr/${{ env.REF }}-${{ env.PR_NUMBER }})
           if [[ -z ${existed_in_repo} ]]
           then
-            echo "branch feature/${{ github.event.inputs.source-branch }} is not exists"
+            echo "branch pr/${{ env.REF }}-${{ env.PR_NUMBER }} is not exists"
           else
-            git push origin --delete feature/${{ github.event.inputs.source-branch }}
-            echo "branch feature/${{ github.event.inputs.source-branch }} deleted" 
+           git push origin --delete pr/${{ env.REF }}-${{ env.PR_NUMBER }}
+           echo "branch pr/${{ env.REF }}-${{ env.PR_NUMBER }} deleted" 
           fi
   
-      - name: Git remote add forked repo
+      - name: Git remote add upstream
+        if: steps.check.outputs.triggered == 'true'
+        env:
+          OWNER: ${{ fromJSON(steps.get-pr.outputs.result).head.repo.owner.login }}
+          REF: ${{ fromJSON(steps.get-pr.outputs.result).head.ref }}
+          PR_NUMBER: ${{ github.event.issue.number }}
         run: |
-          git remote add upstream https://github.com/${{ github.event.inputs.contributor-name }}/amplication.git
+          git remote add upstream https://github.com/amplication/amplication.git
           git fetch --all
-          git checkout upstream/${{ github.event.inputs.source-branch }}
-          git checkout -b feature/${{ github.event.inputs.source-branch }}
-          git push --set-upstream origin feature/${{ github.event.inputs.source-branch }}
+          git checkout ${{ env.REF }}
+          git checkout -b pr/${{ env.REF }}-${{ env.PR_NUMBER }}
+          git push --set-upstream upstream pr/${{ env.REF }}-${{ env.PR_NUMBER }}
           
-          echo "Forked branch ${{ github.event.inputs.contributor-name }}:${{ github.event.inputs.source-branch }} has been pushed to amplication repo in feature/${{ github.event.inputs.source-branch }}"
+          echo "Forked branch ${{ env.OWNER }}:${{ env.REF }} has been pushed to fork-to-branch repo pr/${{ env.REF }}-${{ env.PR_NUMBER }}"
 
-
-
+      - name: Edit PR comment
+        uses: thollander/actions-comment-pull-request@v1
+        env: 
+          REF: ${{ fromJSON(steps.get-pr.outputs.result).head.ref }}
+          PR_NUMBER: ${{ github.event.issue.number }}
+        with:
+          message: 'The branch pr/${{ env.REF }}-${{ env.PR_NUMBER }} was created!'
+          pr_number: ${{ env.PR_NUMBER }}
+          comment_includes: "run branch"
+          GITHUB_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
 
 
 
