--- a/.github/workflows/ci-aws.yml
+++ b/.github/workflows/ci-aws.yml
@@ -141,10 +141,12 @@ jobs:
         run: lerna run --scope=${{matrix.package}} --loglevel=silent test:cov
       
       - name: Coverage Report
-        uses: lucassabreu/comment-coverage-clover@main
+        uses: danhunsaker/clover-reporter-action@v0.2.17-clover
         with:
-          file: packages/${{matrix.service}}/coverage/clover.xml
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          clover-file: packages/${{matrix.service}}/coverage/clover.xml
           title: ${{matrix.service}}
+          
       - name: Discord notification
         if: failure()
         uses: Ilshidur/action-discord@0.3.2
