--- a/.github/workflows/ci-aws.yml
+++ b/.github/workflows/ci-aws.yml
@@ -140,6 +140,12 @@ jobs:
         id: cc
         run: lerna run --scope=${{matrix.package}} --loglevel=silent test:cov
       
+      - uses: romeovs/lcov-reporter-action@v0.2.16
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          lcov-file: packages/${{matrix.service}}/coverage/lcov.info
+          title: ${{matrix.service}}
+          
       - name: Coverage Report
         uses: danhunsaker/clover-reporter-action@v0.2.17-clover
         with:
